# async-users

./: .gitignore  Dockerfile  README.md  asdasd.py  docker-compose.yaml  init.sql  pyproject.toml  pytest.ini  tmp.py
database/: setup.py
db/: setup.py
migrations/: 0001_accounts.sql
src/: messagebus.py  settings.py
src-old/: settings.py
src-old/auth/: adapters.py  models.py  ports.py  protocols.py  router.py  security.py  services.py  settings.py
src-old/messagebus/: __init__.py  domain.py  ports.py  server.py
src-old/users/: models.py
src/adapters/: data_access_objects.py  unit_of_work.py
src/auth/: adapters.py  endpoints.py  exceptions.py  models.py  ports.py  protocols.py  router.py  routers.py  schemas.py  security.py  services.py  settings.py
src/backend/: gateway.py  schemas.py  services.py
src/ddd/: domain.py  ports.py  protocols.py  services.py
src/domain/: application.py  messages.py  models.py  repository.py  services.py
src/messagebus/: application.py  context.py  events.py
src/users/: application.py  commands.py  events.py  model.py  models.py  ports.py  repository.py  security.py  services.py  users.py
src/users-old/: commands.py  events.py  users.py
tests/: test_accounts.py  test_accounts_crud.py  test_db_accounts.py  test_unit_security.py  test_unit_tokenization.py  test_users_context.py  test_users_repository.py
tests-old/e2e/: atest_auth.py
tests-old/integration/: atest_accounts.py
tests-old/unit/: atest_security.py
tests/e2e/: test_auth.py  test_e2e_auth.py  test_jwt_auth.py
tests/integration/: test_accounts.py  test_accounts_crud.py  test_db_accounts.py
tests/unit/: test_application.py  test_auth_models.py  test_auth_security.py  test_auth_settings.py  test_models.py  test_repository.py  test_security.py  (+1 more)
users/: models.py  repository.py  settings.py
(+60 files in other folders)
