[tool.poetry]
name = "fastapi-users"
version = "0.1.0"
description = "A simple user manager with fastapi"
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}


[tool.poetry.group.tests.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
