[tool.poetry]
name = "fastapi-users"
version = "0.1.0"
description = ""
authors = ["ericcardozo <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
